--- a/app.css
+++ b/app.css
@@ -7,4 +7,16 @@ body {
     background-color: lightblue;
     height: 600px;
     background-position: center;
+    background-size: cover;
+}
+
+.container {
+    width: 40%;
+    background-color: white;
+    align-self: center;
+    display: block;
+    margin: 100px auto;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 5px 10px 20px black;
 }
