Added some styles to the list items

--- a/app.css
+++ b/app.css
@@ -25,3 +25,12 @@ ul {
     list-style-type: none;
     padding: 0;
 }
+
+ul li {
+    cursor: pointer;
+    position: relative;
+    padding: 12px 8px 12px 40px;
+    background: whitesmoke;
+    font-size: 18px;
+    transition: 0.2s;
+}
