--- a/app.css
+++ b/app.css
@@ -55,4 +55,9 @@ ul li.checked::before {
     content: "";
     position: absolute;
     border-color: whitesmoke;
+    border-style: solid;
+    border-width: 0px 2px 2px 0px;
+    top: 10px;
+    left: 16px;
+    transform: rotate(45deg);
 }
