--- a/app.css
+++ b/app.css
@@ -63,3 +63,10 @@ ul li.checked::before {
     height: 15px;
     width: 7px;
 }
+
+.close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 12px 16px 12px 16px;
+}
