Applied color and background color to the .close class on hover

--- a/app.css
+++ b/app.css
@@ -70,3 +70,8 @@ ul li.checked::before {
     top: 0;
     padding: 12px 16px 12px 16px;
 }
+
+.close:hover {
+    background-color: orangered;
+    color: white;
+}
