Added styles to the header

--- a/app.css
+++ b/app.css
@@ -75,3 +75,10 @@ ul li.checked::before {
     background-color: orangered;
     color: white;
 }
+
+.header {
+    background-color: teal;
+    padding: 30px 30px;
+    color: wheat;
+    text-align: center;
+}
