--- a/app.css
+++ b/app.css
@@ -98,3 +98,15 @@ input {
     float: left;
     font-size: 16px;
 }
+.addBtn {
+    padding: 10px;
+    width: 25%;
+    background: purple;
+    color: aquamarine;
+    float: left;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+    border-radius: 0;
+}
